com.top_logic.model.search/src/main/java/com/top_logic/model/search/expr/parser/SearchExpressionParser.java
/* SearchExpressionParser.java */
/* Generated By:JavaCC: Do not edit this line. SearchExpressionParser.java */
/*
 * SPDX-FileCopyrightText: 2018 (c) Business Operation Systems GmbH <info@top-logic.com>
 * 
 * SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-BOS-TopLogic-1.0
 */
package com.top_logic.model.search.expr.parser;

import java.util.List;
import java.util.ArrayList;

import com.top_logic.model.search.expr.config.dom.Expr;
import com.top_logic.model.search.expr.config.dom.Expr.*;
import com.top_logic.model.search.expr.config.dom.ExprFactory;
import com.top_logic.model.search.expr.config.dom.ExprFactory.*;

/**
 * Parser for custom {@link Expr} syntax.
 *
 * @author <a href="mailto:bhu@top-logic.com">Bernhard Haumacher</a>
 */
public class SearchExpressionParser implements SearchExpressionParserConstants {
  private ExprFactory _f = new ExprFactory(this);

  public ExprFactory getFactory() {
        return _f;
  }

  public void setFactory(ExprFactory f) {
        _f = f;
  }

  final public Expr expr() throws ParseException {Expr expr;
  Expr v;
  Token t;
  Args a;
    if (jj_2_1(2147483647)) {
      t = jj_consume_token(NAME);
      jj_consume_token(64);
      v = expr();
expr=_f.lambda(t.image, v);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case NULL:
      case TUPLE:
      case SWITCH:
      case NAME:
      case VAR:
      case STRING:
      case TEXTBLOCK:
      case RESKEY:
      case INT:
      case FLOAT:
      case MODULE:
      case TYPE:
      case PART:
      case SINGLETON:
      case BLOCK_START:
      case HTML_START:
      case 74:
      case 78:
      case 79:
      case 82:
      case 86:{
        expr = defineExpr();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr defineExpr() throws ParseException {Expr expr;
  Expr thenExpr;
  Expr elseExpr;
    expr = booleanExpr();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 65:{
      jj_consume_token(65);
      thenExpr = booleanExpr();
      jj_consume_token(66);
      elseExpr = booleanExpr();
expr = _f.ifExpr(expr, thenExpr, elseExpr);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr booleanExpr() throws ParseException {Expr expr;
  Expr right;
    expr = orExpr();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      jj_consume_token(OR);
      right = orExpr();
expr=_f.or(expr, right);
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr orExpr() throws ParseException {Expr expr;
  Expr right;
    expr = andExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(AND);
      right = andExpr();
expr=_f.and(expr, right);
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr andExpr() throws ParseException {Expr expr;
  Expr right;
    expr = aditiveExpr();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 67:
    case 68:
    case 69:
    case 70:
    case 71:
    case 72:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 67:{
        jj_consume_token(67);
        right = aditiveExpr();
expr=_f.eq(expr, right);
        break;
        }
      case 68:{
        jj_consume_token(68);
        right = aditiveExpr();
expr=_f.neq(expr, right);
        break;
        }
      case 69:{
        jj_consume_token(69);
        right = aditiveExpr();
expr=_f.ge(expr, right);
        break;
        }
      case 70:{
        jj_consume_token(70);
        right = aditiveExpr();
expr=_f.gt(expr, right);
        break;
        }
      case 71:{
        jj_consume_token(71);
        right = aditiveExpr();
expr=_f.le(expr, right);
        break;
        }
      case 72:{
        jj_consume_token(72);
        right = aditiveExpr();
expr=_f.lt(expr, right);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr aditiveExpr() throws ParseException {Expr expr;
  Expr right;
    expr = multiplicativeExpr();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 73:
      case 74:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 73:{
        jj_consume_token(73);
        right = multiplicativeExpr();
expr=_f.add(expr, right);
        break;
        }
      case 74:{
        jj_consume_token(74);
        right = multiplicativeExpr();
expr=_f.sub(expr, right);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr multiplicativeExpr() throws ParseException {Expr expr;
  Expr right;
    expr = negatedExpr();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 75:
      case 76:
      case 77:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 75:{
        jj_consume_token(75);
        right = negatedExpr();
expr=_f.mul(expr, right);
        break;
        }
      case 76:{
        jj_consume_token(76);
        right = negatedExpr();
expr=_f.div(expr, right);
        break;
        }
      case 77:{
        jj_consume_token(77);
        right = negatedExpr();
expr=_f.mod(expr, right);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr negatedExpr() throws ParseException {Expr expr;
  Token n;
  Args a;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 78:{
      jj_consume_token(78);
      expr = accessExpr();
expr = _f.not(expr);
      break;
      }
    case 74:{
      jj_consume_token(74);
      expr = accessExpr();
expr = _f.neg(expr);
      break;
      }
    case TRUE:
    case FALSE:
    case NULL:
    case TUPLE:
    case SWITCH:
    case NAME:
    case VAR:
    case STRING:
    case TEXTBLOCK:
    case RESKEY:
    case INT:
    case FLOAT:
    case MODULE:
    case TYPE:
    case PART:
    case SINGLETON:
    case BLOCK_START:
    case HTML_START:
    case 79:
    case 82:
    case 86:{
      expr = accessExpr();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr accessExpr() throws ParseException {Expr expr, arg, index;
  Token n;
  Args a;
    expr = atomicExpr();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CHAIN:
      case ACCESS:
      case 79:
      case 82:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ACCESS:{
        jj_consume_token(ACCESS);
        n = jj_consume_token(NAME);
        jj_consume_token(79);
        a = args();
        jj_consume_token(80);
expr=_f.access(expr, _f.method(n.image, a));
        break;
        }
      case CHAIN:{
        jj_consume_token(CHAIN);
        n = jj_consume_token(NAME);
        jj_consume_token(79);
        a = args();
        jj_consume_token(80);
expr=_f.chain(expr, _f.method(n.image, a));
        break;
        }
      case 79:{
        jj_consume_token(79);
        arg = expr();
expr=_f.apply(expr, arg);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 81:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_6;
          }
          jj_consume_token(81);
          arg = expr();
expr=_f.apply(expr, arg);
        }
        jj_consume_token(80);
        break;
        }
      case 82:{
        jj_consume_token(82);
        index = expr();
        jj_consume_token(83);
expr=_f.at(expr, index);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
}

  final public Expr atomicExpr() throws ParseException {Expr expr, test, key, value, first;
  SwitchBuilder sw;
  DictBuilder dict;
  List<Expr> exprs;
  Expr.Tuple.Coord coord;
  List<Expr.Tuple.Coord> coords;
  Token t, l = null;
  Args a;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NULL:{
      jj_consume_token(NULL);
expr=_f.nullLiteral();
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
expr=_f.trueLiteral();
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
expr=_f.falseLiteral();
      break;
      }
    case STRING:{
      t = jj_consume_token(STRING);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LANGTAG:{
        l = jj_consume_token(LANGTAG);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
expr=l == null ? _f.stringLiteral(t.image) : _f.i18nBuilder().add(t.image, l.image).build();
      break;
      }
    case TEXTBLOCK:{
      t = jj_consume_token(TEXTBLOCK);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LANGTAG:{
        l = jj_consume_token(LANGTAG);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
expr=l == null ? _f.textLiteral(t.image) : _f.i18nBuilder().addText(t.image, l.image).build();
      break;
      }
    case RESKEY:{
      t = jj_consume_token(RESKEY);
expr=_f.reskeyLiteral(t.image);
      break;
      }
    case FLOAT:{
      t = jj_consume_token(FLOAT);
expr=_f.doubleLiteral(t.image);
      break;
      }
    case INT:{
      t = jj_consume_token(INT);
expr=_f.longLiteral(t.image);
      break;
      }
    case VAR:{
      t = jj_consume_token(VAR);
expr=_f.var(t.image);
      break;
      }
    case MODULE:
    case TYPE:
    case PART:
    case SINGLETON:{
      expr = modelLiteral();
      break;
      }
    case TUPLE:{
      t = jj_consume_token(TUPLE);
coords=_f.coords();
      jj_consume_token(79);
      coord = coord();
coords.add(coord);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 81:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        jj_consume_token(81);
        coord = coord();
coords.add(coord);
      }
      jj_consume_token(80);
expr=_f.tuple(coords);
      break;
      }
    case NAME:{
      t = jj_consume_token(NAME);
      jj_consume_token(79);
      a = args();
      jj_consume_token(80);
expr=_f.staticMethod(t.image, a);
      break;
      }
    case 86:{
      expr = i18n();
      break;
      }
    case 79:{
      jj_consume_token(79);
      expr = expr();
      jj_consume_token(80);
      break;
      }
    case SWITCH:{
      jj_consume_token(SWITCH);
sw = _f.switchBlock();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 79:{
        jj_consume_token(79);
        value = defineExpr();
        jj_consume_token(80);
sw.setValue(value);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(BLOCK_START);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TRUE:
        case FALSE:
        case NULL:
        case TUPLE:
        case SWITCH:
        case NAME:
        case VAR:
        case STRING:
        case TEXTBLOCK:
        case RESKEY:
        case INT:
        case FLOAT:
        case MODULE:
        case TYPE:
        case PART:
        case SINGLETON:
        case BLOCK_START:
        case HTML_START:
        case 74:
        case 78:
        case 79:
        case 82:
        case 86:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_8;
        }
        test = defineExpr();
        jj_consume_token(66);
        expr = expr();
        jj_consume_token(84);
sw.addCase(test, expr);
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEFAULT_KEYWORRD:{
        jj_consume_token(DEFAULT_KEYWORRD);
        jj_consume_token(66);
        expr = expr();
        jj_consume_token(84);
sw.setDefault(expr);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(BLOCK_END);
expr = sw.toExpr();
      break;
      }
    case 82:{
      jj_consume_token(82);
exprs=_f.list();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case NULL:
      case TUPLE:
      case SWITCH:
      case NAME:
      case VAR:
      case STRING:
      case TEXTBLOCK:
      case RESKEY:
      case INT:
      case FLOAT:
      case MODULE:
      case TYPE:
      case PART:
      case SINGLETON:
      case BLOCK_START:
      case HTML_START:
      case 74:
      case 78:
      case 79:
      case 82:
      case 86:{
        expr = expr();
exprs.add(expr);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 81:{
            ;
            break;
            }
          default:
            jj_la1[20] = jj_gen;
            break label_9;
          }
          jj_consume_token(81);
          expr = expr();
exprs.add(expr);
        }
